# MiniLPP

./: README.md
src/: CMakeLists.txt  main.cpp
src/ast/: nodes.hpp  nodes_generate_code.cpp  nodes_semantic_analysis.cpp  nodes_to_string.cpp
src/code_handler/: code_handler.cpp  code_handler.hpp  function_handler.cpp  function_handler.hpp
src/lexer/: lexer.hpp  lexer.l
src/parser/: nodes.cpp  nodes.hpp  parser.y
src/runtime/: runtime.cpp  runtime.hpp
test/: conditionals_test.lpp  endline_test.lpp  funcion_necesita_enrutamiento.lpp  hola_mundo.lpp  stack_overflow.lpp  subprg3.lpp  test_lexer.txt  test_parser.txt
